# tp_dfm

./: CMakeLists.txt  config.h.cmake  dune.module  tp_dfm.pc.in
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/tp_dfm/: CMakeLists.txt  tp_dfm.hh
src/: CMakeLists.txt  tp_dfm.cc
tp_dfm/: CMakeLists.txt  computeAperture.hh  computevelocities.hh  fractureproblem.hh  fracturespatialparams.hh  main.cc  matrixproblem.hh  matrixspatialparams.hh  params.input  properties.hh
